...
            modifier = Modifier
                .fillMaxWidth(),
            horizontalArrangement = Arrangement.SpaceEvenly,
            verticalAlignment = Alignment.Bottom
        ) {
            Button(
                modifier = Modifier.testTag("reset_button"),
                colors = ButtonDefaults.buttonColors(
                    containerColor = MaterialTheme.colorScheme.error
                ),
                enabled = !state.isResolvingSpin,
                onClick = { viewModel.onIntent(intent = DreidelIntent.Reset) },
            ) {
                Text(text = "Reset Game")
            }
            Button(
                modifier = Modifier.testTag("spin_button"),
                onClick = { viewModel.onIntent(intent = DreidelIntent.Spin(state.ruleMode)) },
                enabled = !state.isResolvingSpin
            ) {
                Text(text = if (state.isResolvingSpin) "Spinning..." else "Spin Dreidel")
            }
        }
...
